--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -3,6 +3,7 @@
 @headPart = {
 	@extraHead
 	<link href="@routes.Assets.at("css/navbar-extras.min.css")" rel="stylesheet">
+  <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
 }
 
 @bsBase(title, scripts, headPart) {
