--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -52,6 +52,7 @@
   </footer>   
     <script src="@routes.Assets.at("js/jquery.min.js")"></script>
     <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
+    <script src="@routes.Assets.at("js/JsUtils.js")"></script>
     <script src="@routes.Assets.at("vnd/swal/sweetalert.min.js")"></script>
     @scripts
   <script type="text/javascript">
