--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -45,7 +45,7 @@
 
             </div>
             <div class="panel-footer">
-                @helper.form( action=routes.Interview.answer(kitKey.modelId, kitKey.version, questionNode.getId), 'id->"answerForm" ) {
+                @helper.form( action=routes.InterviewCtrl.answer(kitKey.modelId, kitKey.version, questionNode.getId), 'id->"answerForm" ) {
                     @for( ans <- questionNode.getAnswers ) {
                         <button class="btn btn-default"
                                 onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();" >
