Added front page editor

--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -35,6 +35,9 @@
         <li>
           <a href="@routes.UsersCtrl.showUserList()">Users</a>
         </li>
+        <li>
+          <a href="@routes.BackendCtrl.showCustomization()">Customize</a>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
