--- a/datatags-app/app/views/index.scala.html
+++ b/datatags-app/app/views/index.scala.html
@@ -1,166 +1,177 @@
-@(rows: Seq[Row], startTaggingUrl: Call)
+@(text: Option[Setting], rows: Seq[Row], startTaggingUrl: Call)
 
-@extraHead = {
-  <link href="/assets/css/tagsTable.min.css" rel="stylesheet">
-}
-@scripts = {
-  <script>
-          $(document).ready(function () {
-            $("#toggleTagLevels").click(
-                    function () {
-                      $("#tagLevels").slideToggle();
-                      return false;
-                    });
-          });
-  </script>
-}
-@templates.bsBase("PolicyModel Server", scripts = scripts, extraHead = extraHead)(Html("")) {
-  <div class="row">
-    <div class="col-md-12">
-      <div class="jumbotron">
+  @extraHead = {
+    <link href="/assets/css/tagsTable.min.css" rel="stylesheet">
+  }
+
+  @scripts = {
+    <script>
+            $(document).ready(function () {
+              $("#toggleTagLevels").click(
+                      function () {
+                        $("#tagLevels").slideToggle();
+                        return false;
+                      });
+            });
+    </script>
+  }
+
+  @templates.bsBase("PolicyModel Server", scripts = scripts, extraHead = extraHead)(Html("")) {
+    <div class="row">
+      <div class="col-md-12">
         <h1>PolicyModels<sup><small>working title</small></sup></h1>
-        <p>Policy Models (formerly: DataTags)
+        <p>
+          <div class="pull-right">
+            <a href="@startTaggingUrl" class="btn btn-primary btn-lg">View Models</a>
+          </div>
+          Policy Models (formerly: DataTags)
           is a prototype tool for creating formal models of policies, such as proper handling for a given dataset or benefit entitlements for unemployed people. Originally intended as a way of helping researchers understand the laws and contractual agreements that govern how they can share sensitive data,
           it may also be used to model certain types of public policies.</p>
-        <p class="text-right">
-          <a href="@startTaggingUrl" class="btn btn-primary btn-lg">
-            Try an Interview
-          </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        @if( Helpers.hasContent(text.map(_.value)) ){
+          @Html(text.get.value)
+        } else { @defaultText }
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Research</h3>
+        <p>
+          PolicyModels is an open source tool being developed by the <a href="http://privacytools.seas.harvard.edu">
+          Privacy Tools for Sharing Research Data project</a> at Harvard University.
+        </p><p>
+          The goal of this broad, multidisciplinary collaboration between the <a href="http://crcs.seas.harvard.edu ">
+          Center for Research on Computation and Society</a>, the <a href="http://www.iq.harvard.edu">
+          Institute for Quantitative Social Science</a>, the <a href="http://cyber.law.harvard.edu">
+          Berkman Center for Internet & Society</a>, and the <a href="http://www.dataprivacylab.org">Data Privacy Lab</a>
+          is to help enable the collection, analysis, and sharing of personal data for research while providing privacy for individual subjects.
+        </p><p>
+          More information about the development of the DataTags prototype is available from <a href="http://datascience.iq.harvard.edu/datatags">
+          IQSS</a>.
         </p>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <h3>Sample Problem - Sharing Sensitive Research Data</h3>
-      <p>
-        Making data widely available to researchers is good policy. It enables replication and validation of scientific findings and maximizes return on research investment. For these reasons, sponsors and publishers expect or mandate the sharing of data where possible.
-      </p><p>
+  }
+
+
+  @defaultText = {
+    <h3>Sample Problem - Sharing Sensitive Research Data</h3>
+    <p>
+      Making data widely available to researchers is good policy. It enables replication and validation of scientific findings and maximizes return on research investment. For these reasons, sponsors and publishers expect or mandate the sharing of data where possible.
+    </p>
+    <p>
       However, data containing sensitive information about individuals cannot be shared openly without appropriate safeguards. An extensive body of statutes, regulations, institutional policies, consent forms, data sharing agreements, and common practices govern how sensitive data should be used and disclosed in different contexts.
     </p><p>
       Researchers and institutions that manage and share data must interpret how the various legal requirements and other data privacy and security standards constrain their handling of a given dataset. <strong>
       DataTags helps researchers navigate these complex issues</strong>.
     </p>
-      <h3>How PolicyModels Works - Find the Proper DataTag for a Dataset</h3>
+    <h3>How PolicyModels Works - Find the Proper DataTag for a Dataset</h3>
+    <p>
+      Using the following three-step process, PolicyModels automates the assessment of the data handling rules that apply to an individual dataset. The output is a set of tags that describe how the dataset can be stored, transmitted, or used over time. <a id="toggleTagLevels">
+      learn more</a>
+    </p>
+    <div id="tagLevels" class="initiallyHidden">
+      <h3>Tag Levels</h3>
       <p>
-        Using the following three-step process, PolicyModels automates the assessment of the data handling rules that apply to an individual dataset. The output is a set of tags that describe how the dataset can be stored, transmitted, or used over time. <a id="toggleTagLevels">
-        learn more</a>
+        The DataTags prototype generates a set of tags based on the model data classification levels described in the <a href="http://vpr.harvard.edu/pages/harvard-research-data-security-policy">
+        Harvard Research Data Security Policy</a>
+        . The tag levels, a draft version of which appears below, describe the data security and other handling requirements that must be implemented based on the legal restrictions and privacy risks associated with a dataset.
       </p>
-      <div id="tagLevels" class="initiallyHidden">
-        <h3>Tag Levels</h3>
-        <p>
-          The DataTags prototype generates a set of tags based on the model data classification levels described in the <a href="http://vpr.harvard.edu/pages/harvard-research-data-security-policy">
-          Harvard Research Data Security Policy</a>
-          . The tag levels, a draft version of which appears below, describe the data security and other handling requirements that must be implemented based on the legal restrictions and privacy risks associated with a dataset.
-        </p>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title">Risk Levels and Associated Tags</h3>
-              </div>
-              <div class="panel-body">
-                These tags denote the minimum handling requirements based on the risks associated with a dataset.
-                <small>Hover/touch tags for explanation</small>
-              </div>
-
-              <div class="table-responsive">
-                <table class="table tagsTable">
-                  <thead>
-                    <tr>
-                      <th>Level</th>
-                      <th>DUA Agreement Method</th>
-                      <th>Authentication</th>
-                      <th>Transit</th>
-                      <th>Storage</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  @for((row, idx) <- rows.zipWithIndex) {
-                    <tr class="row-@idx">
-                      <th>
-                          &nbsp;&nbsp;
-                        <div class="tag tag-@idx">@row.title</div>
-                      </th>
-                      @for((cell, idx) <- row.cells.zipWithIndex) {
-                        <td>
-                          <div class="resultValue result-@cell.severity">
-                            <span title="@cell.infoTitle" @if(idx == 3) {
-                              data-placement="left"
-                            } data-trigger="hover" data-toggle="popover" data-content="@cell.info">
-                            @cell.title
-                            </span>
-                          </div>
-                        </td>
-                      }
-                    </tr>
-                    <tr class="row-@idx">
-                      <td colspan="5" class="description">@row.description</td>
-                    </tr>
-                  }
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="row">
-        <div class="col-md-4">
-          <div class="insetBox">
-            <div class="iconContainer">
-              <i class="fa fa-list-alt fa-4x"></i>
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Risk Levels and Associated Tags</h3>
             </div>
-            <h6>Step 1<br/>Questionnaire</h6>
-            <p>The user answers a series of questions designed to elicit the key properties of a given dataset</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="insetBox">
-            <div class="iconContainer">
-              <i class="fa fa-cog fa-4x fa-spin"></i>
+            <div class="panel-body">
+              These tags denote the minimum handling requirements based on the risks associated with a dataset.
+              <small>Hover/touch tags for explanation</small>
             </div>
-            <h6>Step 2<br/>Assessment</h6>
-            <p>
-              Based on the user’s responses, DataTags applies inference rules to determine which handling requirements are relevant to the dataset</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="insetBox">
-            <div class="iconContainer">
-              <i class="fa fa-tags fa-4x"></i>
+
+            <div class="table-responsive">
+              <table class="table tagsTable">
+                <thead>
+                  <tr>
+                    <th>Level</th>
+                    <th>DUA Agreement Method</th>
+                    <th>Authentication</th>
+                    <th>Transit</th>
+                    <th>Storage</th>
+                  </tr>
+                </thead>
+                <tbody>
+                @for((row, idx) <- rows.zipWithIndex) {
+                  <tr class="row-@idx">
+                    <th>
+                        &nbsp;&nbsp;
+                      <div class="tag tag-@idx">@row.title</div>
+                    </th>
+                    @for((cell, idx) <- row.cells.zipWithIndex) {
+                      <td>
+                        <div class="resultValue result-@cell.severity">
+                          <span title="@cell.infoTitle" @if(idx == 3) {
+                            data-placement="left"
+                          } data-trigger="hover" data-toggle="popover" data-content="@cell.info">
+                          @cell.title
+                          </span>
+                        </div>
+                      </td>
+                    }
+                  </tr>
+                  <tr class="row-@idx">
+                    <td colspan="5" class="description">@row.description</td>
+                  </tr>
+                }
+                </tbody>
+              </table>
             </div>
-            <h6>Step 3<br/>Tag Assignment</h6>
-            <p>
-              DataTags generates simple, iconic tags that indicate how the dataset can be stored, transmitted, or used based on its properties and the applicable restrictions.
-            </p>
           </div>
         </div>
       </div>
-      <p>
-        PolicyModels is being designed to integrate with the open source data repository software <a href="http://thedata.org" target="_blank">
-        Dataverse</a>
-        and its suite of access controls and statistical analysis tools. It will also operate as a standalone tool and as an application that can be integrated with other platforms.
-      </p>
-      <div style="text-align: center">
-        <a href="@startTaggingUrl" class="btn btn-primary btn-lg">
-          Try an Interview
-        </a>
-      </div>
-      <h3>Research</h3>
-      <p>
-        PolicyModels is an open source tool being developed by the <a href="http://privacytools.seas.harvard.edu">
-        Privacy Tools for Sharing Research Data project</a> at Harvard University.
-      </p><p>
-      The goal of this broad, multidisciplinary collaboration between the <a href="http://crcs.seas.harvard.edu ">
-      Center for Research on Computation and Society</a>, the <a href="http://www.iq.harvard.edu">
-      Institute for Quantitative Social Science</a>, the <a href="http://cyber.law.harvard.edu">
-      Berkman Center for Internet & Society</a>, and the <a href="http://www.dataprivacylab.org">Data Privacy Lab</a>
-      is to help enable the collection, analysis, and sharing of personal data for research while providing privacy for individual subjects.
-    </p><p>
-      More information about the development of the DataTags prototype is available from <a href="http://datascience.iq.harvard.edu/datatags">
-      IQSS</a>.
-    </p><p>
     </div>
-  </div>
-}
+    <div class="row">
+      <div class="col-md-4">
+        <div class="insetBox">
+          <div class="iconContainer">
+            <i class="fa fa-list-alt fa-4x"></i>
+          </div>
+          <h6>Step 1<br/>Questionnaire</h6>
+          <p>The user answers a series of questions designed to elicit the key properties of a given dataset</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="insetBox">
+          <div class="iconContainer">
+            <i class="fa fa-cog fa-4x fa-spin"></i>
+          </div>
+          <h6>Step 2<br/>Assessment</h6>
+          <p>
+            Based on the user’s responses, DataTags applies inference rules to determine which handling requirements are relevant to the dataset</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="insetBox">
+          <div class="iconContainer">
+            <i class="fa fa-tags fa-4x"></i>
+          </div>
+          <h6>Step 3<br/>Tag Assignment</h6>
+          <p>
+            DataTags generates simple, iconic tags that indicate how the dataset can be stored, transmitted, or used based on its properties and the applicable restrictions.
+          </p>
+        </div>
+      </div>
+    </div>
+    <p>
+      PolicyModels is being designed to integrate with the open source data repository software <a href="http://thedata.org" target="_blank">
+      Dataverse</a>
+      and its suite of access controls and statistical analysis tools. It will also operate as a standalone tool and as an application that can be integrated with other platforms.
+    </p>
+    <div style="text-align: center">
+      <a href="@startTaggingUrl" class="btn btn-primary btn-lg">
+        Try an Interview
+      </a>
+    </div>
+  }
