--- a/datatags-app/app/views/index.scala.html
+++ b/datatags-app/app/views/index.scala.html
@@ -36,6 +36,9 @@
         } else { @defaultText }
       </div>
     </div>
+  <div class="row">
+    <div class="col-md-12">@comps.comments("ReadMe", "a", 1, "b", "c")</div>
+  </div>
     <div class="row">
       <div class="col-md-12">
         <h3>Research</h3>
