--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -53,6 +53,8 @@
     <script src="@routes.Assets.at("js/jquery.min.js")"></script>
     <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
     <script src="@routes.Assets.at("js/JsUtils.js")"></script>
+    <script src="@routes.Assets.at("js/Comments.js")"></script>
+    <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     <script src="@routes.Assets.at("vnd/swal/sweetalert.min.js")"></script>
     @scripts
   <script type="text/javascript">
