--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -54,6 +54,7 @@
     <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
     <script src="@routes.Assets.at("js/JsUtils.js")"></script>
     <script src="@routes.Assets.at("vnd/swal/sweetalert.min.js")"></script>
+    <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     @scripts
   <script type="text/javascript">
     $(document).ready( function(){ 
