--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -384,17 +384,25 @@ ol.modelMessageList {
 .commentComponent {
   position: relative;
   overflow: visible;
-}
-.commentFormDiv {
-  position: absolute;
-  top: 1.25em;
-  right: 0;
-  width: 300px;
-  height: auto;
-  z-index: 5000;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px;
-  box-shadow: 0 8px 8px rgba(0,0,0,.25);
-  background-color: #FFFF88;
+
+  .commentFormDiv {
+    position: absolute;
+    top: 1.25em;
+    right: 0;
+    width: 300px;
+    height: auto;
+    z-index: 5000;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0 8px 8px rgba(0,0,0,.25);
+    background-color: #FEFEBD;
+    .textareaCtnr {
+      margin-top: 5px;
+    }
+    .buttonBar {
+      text-align: right;
+      margin-top: 5px;
+    }
+  }
 }
