--- a/datatags-app/app/views/comps/commentingStatus.scala.html
+++ b/datatags-app/app/views/comps/commentingStatus.scala.html
@@ -1,6 +1,5 @@
 @(cs:CommentingStatus.Value)
 @cs match {
   case CommentingStatus.Closed             => {<span class="label label-default">closed</span>}
-  case CommentingStatus.LoggedInUsersOnly  => {<span class="label label-info">users only</span>}
-  case CommentingStatus.Everyone           => {<span class="label label-primary">everyone</span>}
+  case CommentingStatus.Everyone           => {<span class="label label-primary">open</span>}
 }
