--- a/datatags-app/app/views/comps/comments.scala.html
+++ b/datatags-app/app/views/comps/comments.scala.html
@@ -1,4 +1,4 @@
-@(formID:String, versionPolicyModelID:String, version:Int, targetType:String, targetContent:String)
+@(formID:String, versionPolicyModelID:String, version:Int, locOpt:Option[String], targetType:String, targetContent:String)
 <div class="commentComponent">
   <button onclick="$('#@formID').slideToggle()" class="btn btn-sm btn-success"><i class="fa fa-edit"></i> Comment</button>
   <div class="commentFormDiv" id="@formID" style="display:none">
@@ -6,15 +6,18 @@
     <input type="hidden" data-role="version" value="@version">
     <input type="hidden" data-role="targetType" value="@targetType">
     <input type="hidden" data-role="targetContent" value="@targetContent">
+    @for( loc <- locOpt ) {
+      <input type="hidden" data-role="localization" value="@loc">
+    }
     <div>
       <input placeholder="Commenter Name" class="form-control" type="text" data-role="name">
     </div>
-    <div>
+    <div class="textareaCtnr">
       <textarea class="form-control" placeholder="Comment text" rows="4" cols="20" data-role="comment"></textarea>
     </div>
-    <div class="text-right">
-        <button class="btn btn-default" type="button" onclick="Comments.closeForm('@formID')">Cancel</button>
-        <button class="btn btn-primary" type="button" onclick="Comments.save('@formID')">Comment</button>
+    <div class="buttonBar">
+        <button class="btn btn-default btn-sm" type="button" onclick="Comments.closeForm('@formID')">Cancel</button>
+        <button class="btn btn-primary btn-sm" type="button" onclick="Comments.save('@formID')">Comment</button>
     </div>
   </div>
 </div>
