--- a/datatags-app/app/views/backoffice/index.scala.html
+++ b/datatags-app/app/views/backoffice/index.scala.html
@@ -11,7 +11,7 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <h3>Unread Comments</h3>
+      <h3>Recent Comments</h3>
       <div class="noData">
         TBD
       </div>
