--- a/datatags-app/app/views/comps/commentingStatus.scala.html
+++ b/datatags-app/app/views/comps/commentingStatus.scala.html
@@ -1,5 +1,5 @@
 @(cs:CommentingStatus.Value)
 @cs match {
-  case CommentingStatus.Closed             => {<span class="label label-default">closed</span>}
-  case CommentingStatus.Everyone           => {<span class="label label-primary">open</span>}
+  case CommentingStatus.Closed             => {<span class="label label-default">comments closed</span>}
+  case CommentingStatus.Everyone           => {<span class="label label-success">comments open</span>}
 }
