Display comments - ready

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -380,6 +380,17 @@ ol.modelMessageList {
   }
 }
 
+div.help {
+  color: #767676;
+  background-color: rgba(255,255,255,0.6);
+  padding: 1em;
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: 5px;
+  font-style: italic;
+}
+
+
+
 // Comments
 .commentComponent {
   position: relative;
@@ -405,4 +416,23 @@ ol.modelMessageList {
       margin-top: 5px;
     }
   }
+}
+
+.table > tbody > tr > td.commentCtnr {
+  padding-top: 0;
+  border-top: none;
+}
+
+.commentContent {
+  padding: 0.2em 1em;
+  margin: 0;
+  background-color: rgba(255,255,255,.5);
+}
+
+.commentSubjectCtnr {
+  border: 1px solid black;
+  padding: 1.5em;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.5) inset;
+  background-color: #0000004d;
+  border-radius: 4px;
 }
