--- a/datatags-app/app/views/comps/kitMessageList.scala.html
+++ b/datatags-app/app/views/comps/kitMessageList.scala.html
@@ -11,4 +11,6 @@
       <li class="message@cap(m.getLevel.toString)"><i class="fa @icon(m.getLevel)" aria-hidden="true"></i> @m.getMessage</li>
     }
   </ol>
+} else {
+  <div class="noData">No messages.</div>
 }
