--- a/datatags-app/app/views/interview/showReadme.scala.html
+++ b/datatags-app/app/views/interview/showReadme.scala.html
@@ -9,7 +9,7 @@
 
 @import views.Helpers
 
-@templates.bsNavBar( "Question", 'tag, scripts) {
+@templates.bsNavBar( qKit.model.getMetadata.getTitle + ": README", 'tag, scripts) {
 
 <div class="row">
   <div class="col-md-12">
