--- a/datatags-app/app/views/comps/commentStatus.scala.html
+++ b/datatags-app/app/views/comps/commentStatus.scala.html
@@ -1,4 +1,4 @@
-@(cmt:Comment)
+@(cmt:Comment, idOpt:Option[String]=None)
 @defining( if(cmt.resolved) "default" else "primary" ) { cclass=>
-  <span class="label label-@cclass">@if(cmt.resolved){resolved}else{open}</span>
+  <span @for(id<-idOpt){id="@id" }class="label label-@cclass">@if(cmt.resolved){resolved}else{open}</span>
 }
