--- a/datatags-app/app/views/backoffice/index.scala.html
+++ b/datatags-app/app/views/backoffice/index.scala.html
@@ -49,6 +49,11 @@
       <a href="@routes.UsersCtrl.showNewUserPage()" class="btn btn-default btn-block">
         Add User
       </a>
+      <a href="@routes.UsersCtrl.showInviteUser()" class="btn btn-default btn-block">
+        Invite User
+      </a>
+
+
     </div>
   </div>
 }
