--- a/datatags-app/app/views/backoffice/users/login.scala.html
+++ b/datatags-app/app/views/backoffice/users/login.scala.html
@@ -31,7 +31,7 @@
 
         <div class="form-group">
           <div class="col-md-4">
-            @*<a href="">forgot password?</a>*@
+            <a href="/admin/forgotPassword">forgot password?</a>
           </div>
           <div class="col-md-8">
             <div class="text-right">
