--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -8,6 +8,14 @@ h1, h2, h3 {
   text-shadow: 0 1px 1px rgba(0,0,0,0.25);
 }
 
+.mt-1 {
+  margin-top: 1em;
+}
+.disabled {
+  pointer-events: none;
+  cursor: default;
+}
+
 .page-header {
   text-align: center;
 }
