--- a/datatags-app/app/views/backoffice/users/userEditor.scala.html
+++ b/datatags-app/app/views/backoffice/users/userEditor.scala.html
@@ -1,5 +1,13 @@
 @(form:Form[UserFormData], destination:Call, isNew:Boolean, isInvite:Boolean, uuid:Option[String]=None, activeFirst:Boolean=true)
 
+@scripts = {
+  <script >
+          $(document).ready( function(){
+            $("#uuid").val(window.location.href.split("/")[window.location.href.split("/").length - 1])
+          } );
+  </script>
+}
+
 @content = {
   <div class="container">
     <div class="row">
@@ -42,6 +50,11 @@
                   <li class="text-danger">@Helpers.messageToEng(ge)</li>
                 }
                 </ul>
+              }
+              @if(form("uuid").hasErrors){
+                <div class="errors">
+                @form("uuid").errors.map(Helpers.messageToEng).mkString("<br>")
+                </div>
               }
               <div class="form-group@Helpers.fieldStatus(form("username"))">
                 <label for="idInput" class="col-sm-2 control-label">Username</label>
@@ -140,7 +153,7 @@
               <div class="form-group">
                 <div class="col-md-12 text-right">
                   <hr>
-                  <a href="" class="btn btn-default">Cancel</a>
+                  <a href="/" class="btn btn-default">Cancel</a>
                   <button type="submit" class="btn btn-primary">Save</button>
                 </div>
               </div>
@@ -213,7 +226,7 @@
 }
 
 @if(!isInvite){
-  @templates.backend("Profile Editor", 'backOffice)(content)
+  @templates.backend("Profile Editor", 'backOffice, scripts)(content)
 } else {
-  @templates.bsBase("New User")(Html(""))(content)
+  @templates.bsBase("New User")(scripts)(content)
 }
