--- a/datatags-app/app/views/backoffice/users/userList.scala.html
+++ b/datatags-app/app/views/backoffice/users/userList.scala.html
@@ -5,6 +5,7 @@
       <h1>
         <div class="pull-right">
           <a href="@routes.UsersCtrl.showNewUserPage" class="btn btn-large btn-default"><i class="fa fa-plus-circle"></i> Add</a>
+          <a href="@routes.UsersCtrl.showInviteUser" class="btn btn-large btn-default"><i class="fa fa-send"></i> Invite User</a>
         </div>
         Users
       </h1>
